# moss-gui

./: .gitignore  README.md  __init__.py  build.spec  main.py  pyproject.toml  requirements.txt  task.md
.github/workflows/: build-windows.yml
app/components/: data_table.py  form_inputs.py
app/pages/: aliases_page.py  analysis_page.py  download_page.py  grading_page.py
app/scripts/: __init__.py  getLastSubmission.py  moss  pull.py  pullSubmissions.py
app/utils/: codeforces_api.py  csv_handler.py  moss_runner.py
