[project]
name = "moss-gui"
version = "1.0.0"
description = "GUI application for managing student assignment submissions and MOSS plagiarism detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.28.0",
]

[project.scripts]
moss-gui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
